--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -190,9 +190,9 @@
 
     <!-- 关于 -->
     <string name="about_title">关于我们</string>
-    <string name="about_author"><font color="#85b84f">Android</font> 轮子哥</string>
+    <string name="about_author"><font color="#85b84f">Android</font> xys</string>
 
-    <string name="about_copyright">Copyright © 2018 &#8211; 2021</string>
+    <string name="about_copyright">Copyright © 2022 &#8211; 2023</string>
 
     <!-- 忘记密码 -->
     <string name="password_forget_title">忘记密码</string>
